Clean up unwanted elements, confine all to container

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -2,10 +2,14 @@
 <html lang="{{ .Site.Language | default "en" }}">
     {{- partial "head.html" . -}}
     <body>
-        {{- partial "header.html" . -}}
-        <div id="content">
-        {{- block "main" . }}{{- end }}
+        <div class="container">
+            <div class="row">
+                {{- partial "header.html" . -}}
+                <div id="content">
+                {{- block "main" . }}{{- end }}
+                </div>
+                {{- partial "footer.html" . -}}
+            </div>
         </div>
-        {{- partial "footer.html" . -}}
     </body>
 </html>
