--- a/layouts/404.html
+++ b/layouts/404.html
@@ -1,10 +1,11 @@
 {{ define "main" }}
 
 <main>
-    <h1 class="post-title">404</h1>
-    <div class="post-line"></div>
-    <div style="text-align: center;">
-        <p>The page you are looking for does not exist. Want to <a href="/">go home</a> instead?</p>
+    <div class="row">
+        <div class="one-half column" style="margin-top: 25%">
+            <h4>404</h4>
+            <p>The page you are looking for does not exist. Want to <a href="/">go home</a> instead?</p>
+        </div>
     </div>
 </main>
 
